# ml-dsl

./: .gitignore
mlirgen/: CMakeLists.txt  Notes.txt  README.txt  mlirgen.cpp
src/: ir.cpp  ir.h  irgenerator.cpp  irstatementvisitor.h  irvaluevisitor.h  layer.cpp  layer.h  main.cpp  makefile  mldslapi.h  network.cpp  network.h  networkvisitor.h  neuron.cpp  neuron.h  neuronproperty.h  value.cpp  value.h  valuetype.cpp  valuetype.h  valuevisitor.h
visualizer/: mlop.json  visualizer.html
